z-index fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -69,7 +69,7 @@ header {
 	background: $grey-lighter;
 	border-bottom: 1px solid $grey-light;
 	position: absolute;
-	z-index: 999;
+	z-index: 20000;
 	padding: $global-padding;
 	left: 0;
 	right: 0;
